--- a/readme.html
+++ b/readme.html
@@ -1,9 +1,23 @@
-<p>Home Page</p>
-<p>Hi, my name is Alex Franklin</p>
-<p>I am an information technology student at the University of Missouri.</p>
+<!DOCTYPE html>
+<html>
+
+
+
+<head>
+    <title>Home</title>
+</head>
+
+<body>
+    <p>Hi, my name is Alex Franklin</p>
+<p>I am in information technology student at the University of Missouri.</p>
 <p>Use these links to acess other pages on my website!</p>
-<p>
-  *Personal Experience
-  *Hobbies
-  *Academic Performance
-  *Code Sample</p>
+</body>
+
+<ul style="list-style-type: circle;">
+<li><a href="https://henryegloff.com/how-to-develop-a-basic-webpage-using-html-and-css/">Personal Experience</a></li>
+<li><a href="https://henryegloff.com/how-to-develop-a-basic-webpage-using-html-and-css/">Hobbies</a></li>
+<li><a href="https://henryegloff.com/how-to-develop-a-basic-webpage-using-html-and-css/">Academic Performance</a></li>
+<li><a href="https://henryegloff.com/how-to-develop-a-basic-webpage-using-html-and-css/">Code Sample</a></li>
+</ul>
+
+</html>
