--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </body>
 
 <ul style="list-style-type: circle;">
-<li><a href="https://henryegloff.com/how-to-develop-a-basic-webpage-using-html-and-css/">Personal Experience</a></li>
+<li><a href="https://github.com/alexfranklin53/AlexFranklin53.github.io/blob/main/PersonalExperience.html">Personal Experience</a></li>
 <li><a href="https://henryegloff.com/how-to-develop-a-basic-webpage-using-html-and-css/">Hobbies</a></li>
 <li><a href="https://henryegloff.com/how-to-develop-a-basic-webpage-using-html-and-css/">Academic Performance</a></li>
 <li><a href="https://henryegloff.com/how-to-develop-a-basic-webpage-using-html-and-css/">Code Sample</a></li>
