--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 </body>
 
 <ul style="list-style-type: circle;">
-<li><a href="file:///Users/fmsal/Desktop/SP22Python/PersonalExperience.html">Personal Experience</a></li>
-<li><a href="file:///Users/fmsal/Desktop/SP22Python/Hobbies.html">Hobbies</a></li>
-<li><a href="file:///Users/fmsal/Desktop/SP22Python/AcademicPerformance.html">Academic Performance</a></li>
-<li><a href="file:///Users/fmsal/Desktop/SP22Python/CodeSample.html">Code Sample</a></li>
+<li><a href="PersonalExperience.html">Personal Experience</a></li>
+<li><a href="Hobbies.html">Hobbies</a></li>
+<li><a href="AcademicPerformance.html">Academic Performance</a></li>
+<li><a href="CodeSample.html">Code Sample</a></li>
 </ul>
 
 </html>
