--- a/AcademicPerformance.html
+++ b/AcademicPerformance.html
@@ -18,7 +18,7 @@
 
 
     <p>
-    <a href="file:///Users/fmsal/Desktop/SP22Python/index513.html">Return Home</a>
+    <a href="index.html">Return Home</a>
 
 </p>
 
