--- a/CodeSample.html
+++ b/CodeSample.html
@@ -85,7 +85,7 @@
     </tr>
   </table>
 
-  <a href="file:///Users/fmsal/Desktop/SP22Python/index513.html">Return Home</a>
+  <a href="index.html">Return Home</a>
 
 
 </html>
