--- a/Hobbies.html
+++ b/Hobbies.html
@@ -11,7 +11,7 @@
 <li>3d Printing: I love to discover and learn emerging technologies!</li>
 </ol>
 
-<a href="file:///Users/fmsal/Desktop/SP22Python/index513.html">Return Home</a>
+<a href="index.html">Return Home</a>
 
 
 
