--- a/PersonalExperience.html
+++ b/PersonalExperience.html
@@ -27,7 +27,7 @@
 </ul>
 
 
-<a href="file:///Users/fmsal/Desktop/SP22Python/index513.html">Return Home</a>
+<a href="index.html">Return Home</a>
 </html>
 
 
